--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "classnames": "^2.3.1",
     "codecov": "^3.8.3",
     "gatsby": "^2.32.13",
+    "gatsby-cli": "^4.14.0",
     "gatsby-link": "^2.11.0",
     "gatsby-plugin-catch-links": "^2.10.0",
     "gatsby-plugin-feed": "^2.13.1",
